# PMDL-DisasterTweets

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
configs/: data_description.yaml  embeders_description.yaml  models_description.yaml
deployment/: api.Dockerfile  api_requirements.txt  app.py  gradio.Dockerfile  gradio_app.py  healthcheck.py
models/champions/: BernoulliNB_v0.pkl  Catboost_v0.pkl  LogisticRegression_v0.pkl  RandomForestClassifier_v0.pkl
models/embedders/all-MiniLM-L6-v2/: README.md  config.json
models/embedders/all-MiniLM-L6-v2_cleaned_text/: README.md  config_sentence_transformers.json
notebooks/: data_transformers.ipynb  eda.ipynb  embedders.ipynb  pretrained-notebook.ipynb  test_classifiers.ipynb  test_embeder.ipynb  test_transformation.ipynb  test_zenml.ipynb  transformer_inference.ipynb
notebooks/.zen/: config.yaml
pipelines/: data_prepare.py  data_prepare_v0.py  data_prepare_v1.py
reports/: README.md
scripts/: run_pipline.sh
services/: .gitignore  README.md
src/: data.py  main.py  transformations.py  utils.py
